# langgraph-redis

./: .gitignore  Makefile  README.md  pyproject.toml  scripts.py
.github/workflows/: lint.yml  test.yml
examples/: README.md  docker-compose.yml  persistence-functional.ipynb
langgraph/checkpoint/redis/: __init__.py  aio.py  ashallow.py  base.py  jsonplus_redis.py  shallow.py  types.py  util.py  version.py
langgraph/docs/: Dockerfile.jupyter  create-react-agent-memory.ipynb  cross-thread-persistence.ipynb  persistence-functional.ipynb  persistence_redis.ipynb
langgraph/store/redis/: __init__.py  aio.py  base.py  token_unescaper.py  types.py
tests/: conftest.py  embed_test_utils.py  test_async.py  test_async_store.py  test_shallow_async.py  test_shallow_sync.py  test_store.py  test_sync.py
